+ add "Timer over Spider's Den bones" feature